--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
         messages here
     </div>
 
-    <div>
-        
+    <div id="actual message">
+        type here!
     </div>
 
     <!-- load controller (own script) -->
