--- a/templates/index.html
+++ b/templates/index.html
@@ -4,29 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Chat</title>
-    <!-- load jquery and socket.io -->
+    <!-- jquery és socket.io betöltése -->
     <script src="/static/js/query-3.5.1.min.js"></script>
     <script src="/static/js/socket.io.js"></script>
 
-    <!-- load css -->
+    <!-- stíluslapok betöltése -->
     <link href="/static/css/base.css" type="text/css" rel="stylesheet">
 
 </head>
 
 <body>
-    <div id="logo">
-        logo here!
+    <!-- A logó helye. Ha lenne menu, itt  egy hely neki! -->
+    <div id="logo" class="logo">
+        <img src="/static/img/logo.png" class="logoimg">
     </div>
 
+    <!-- az üzenetek tárolója -->
     <div id="messages">
         messages here
     </div>
 
+    <!-- a felhasználói input tárolója -->
     <div id="actual message">
         type here!
     </div>
 
-    <!-- load controller (own script) -->
+    <!-- saját script betöltése -->
     <script src="/static/js/controller.js"></script>
 </body>
 
