--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,8 @@
     <!-- a felhasználói input tárolója -->
     <div id="actual message" class="actual_message">
         <!-- az üzenetküldés ikonja -->
-        <img src="/static/img/send.png" class="icon">
-        type here!
+        <img src="/static/img/send.png" class="icon" id="send_icon">
+        <input type="text" id="ac_message">
     </div>
 
     <!-- saját script betöltése -->
