--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,28 +8,39 @@ body{
     color: #000000;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
+    padding: 0;
 }
 
 .logo{
-    position: sticky;
-    top: 0;
-    display: block;
-    width: 100%;
-    z-index: 1;
+    margin: 0;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding: 0;
+    width: 100vw;
+    background-color: black;
+    box-shadow: 0px 10px 10px -1px rgba(0,0,0,1);
 }
 
 .logoimg{
-    margin: auto;
-    width: 100%;
+    display: inline-block;
+    width: 15vw;
+    margin: 5px;
+}
+
+.interface_holder{
+    position: absolute;
+    top: 10vw;
+    text-align: center;
 }
 
 .messages{
-    width: 90vw;
-    height: 30vh;
-    border: 1px solid black;
-    margin: auto;
     display: block;
-    border-radius: 10px;
+    width: 90vw;
+    height: 50vh;
+    border: 1px solid black;
+    display: block;
+    border-radius: 5px;
     overflow: auto;
     background-color: rgba(255,255,255,0.4);
     padding: 5px;
@@ -44,14 +55,13 @@ body{
 }
 
 .actual_message{
-    position: absolute;
-    left: 4.5vw;
+    position: relative;
+    display: block;
     width: 90vw;
     height: 5vh;
     border: 1px solid black;
-    margin: auto;
     display: block;
-    border-radius: 10px;
+    border-radius: 5px;
     overflow: visible;
     background-color: rgba(255,255,255,0.4);
     padding: 5px;
