--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
         <button id="logout" class="negativebutton">logout</button>
     </div>
 
+    <div id="if">
     <div id="user_interface" class="interface_holder">
 
         <div class="messages">
@@ -57,7 +58,7 @@
         </div>
 
     </div>
-
+    </div>
 
     <!-- saját script betöltése -->
     <script src="/static/js/controller.js"></script>
