--- a/templates/errormessage.html
+++ b/templates/errormessage.html
@@ -1,6 +1,6 @@
 <div id="error_modal" class="modalback">
     <div class="modal_frame" style="border: 2px solid red; padding: 5px; box-shadow: 0px 0px 6px 2px rgba(255,0,0,1);">
-        <img class="close_signup" draggable="false" src="/static/img/icons/close.png" id="cancel_error">
+        <img class="close_modal" draggable="false" src="/static/img/close.png" id="cancel_error">
         {{message}}
         <a href="https://en.wikipedia.org/wiki/Techno_Viking"><img class="viking" draggable="false" src="/static/img/viking.png" id="viking"></a>
     </div>
