--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
             <!-- az üzenetek tárolója -->
             <div id="messages" class="textflow">
                 <!-- ide pakolgatjuk az üzeneteket -->
+                {% include 'messageflow.html' %}
             </div>
 
         </div>
