--- a/templates/messageflow.html
+++ b/templates/messageflow.html
@@ -1,7 +1,55 @@
-<div id="message1" class="ownmessage">
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
     saját üzenet
 </div>
+<br>
 
-<div id="message2" class="foreignmessage">
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
     idegen üzenet
 </div>
+<br>
+
+<div class="servermessage">
+    <div class="stamp">
+        SERVER 03-10-2020, 13:30
+    </div>
+    szerver üzenet
+</div>
+<br>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
+<br>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+<br>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+<br>
+
+<div class="servermessage">
+    <div class="stamp">
+        SERVER 03-10-2020, 13:30
+    </div>
+    szerver üzenet
+</div>
+<br>
