--- a/static/css/base.css
+++ b/static/css/base.css
@@ -210,7 +210,8 @@ body{
 .ownmessage{
     display: block;
     width: fit-content;
-    font-size: 1.5vw;
+    float: right;
+    font-size: 1.5vh;
     padding: 2px;
     border: 1px solid black;
     border-radius: 5px;
@@ -220,9 +221,24 @@ body{
 .foreignmessage{
     display: block;
     width: fit-content;
-    font-size: 1.5vw;
+    float: left;
+    font-size: 1.5vh;
     padding: 2px;
     border: 1px solid black;
     border-radius: 5px;
     background-color: rgba(202, 219, 237, 0.5);
+}
+
+.servermessage{
+    display: block;
+    text-align: center;
+    font-size: 1.5vh;
+    padding: 2px;
+    border: 1px solid black;
+    background-color: rgba(252, 219, 207, 0.5);
+}
+
+.stamp{
+    text-align: center;
+    font-size: 50%;
 }
