--- a/static/css/base.css
+++ b/static/css/base.css
@@ -203,3 +203,42 @@ body{
 .viking:hover{
     max-width: 75px;
 }
+
+
+/* messages */
+
+.ownmessage{
+    display: block;
+    width: fit-content;
+    float: right;
+    font-size: 1.5vh;
+    padding: 2px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: rgba(236, 247, 218, 0.5);
+}
+
+.foreignmessage{
+    display: block;
+    width: fit-content;
+    float: left;
+    font-size: 1.5vh;
+    padding: 2px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: rgba(202, 219, 237, 0.5);
+}
+
+.servermessage{
+    display: block;
+    text-align: center;
+    font-size: 1.5vh;
+    padding: 2px;
+    border: 1px solid black;
+    background-color: rgba(252, 219, 207, 0.5);
+}
+
+.stamp{
+    text-align: center;
+    font-size: 50%;
+}
