--- a/templates/messageflow.html
+++ b/templates/messageflow.html
@@ -4,7 +4,6 @@
     </div>
     saját üzenet
 </div>
-<br>
 
 <div class="foreignmessage">
     <div class="stamp">
@@ -12,7 +11,6 @@
     </div>
     idegen üzenet
 </div>
-<br>
 
 <div class="servermessage">
     <div class="stamp">
@@ -20,7 +18,6 @@
     </div>
     szerver üzenet
 </div>
-<br>
 
 <div class="ownmessage">
     <div class="stamp">
@@ -28,7 +25,13 @@
     </div>
     saját üzenet
 </div>
-<br>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
 
 <div class="foreignmessage">
     <div class="stamp">
@@ -36,7 +39,6 @@
     </div>
     idegen üzenet
 </div>
-<br>
 
 <div class="foreignmessage">
     <div class="stamp">
@@ -44,7 +46,6 @@
     </div>
     idegen üzenet
 </div>
-<br>
 
 <div class="servermessage">
     <div class="stamp">
@@ -52,4 +53,115 @@
     </div>
     szerver üzenet
 </div>
-<br>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+
+<div class="servermessage">
+    <div class="stamp">
+        SERVER 03-10-2020, 13:30
+    </div>
+    szerver üzenet
+</div>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+
+<div class="servermessage">
+    <div class="stamp">
+        SERVER 03-10-2020, 13:30
+    </div>
+    szerver üzenet
+</div>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+
+<div class="servermessage">
+    <div class="stamp">
+        SERVER 03-10-2020, 13:30
+    </div>
+    szerver üzenet
+</div>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
+
+<div class="ownmessage">
+    <div class="stamp">
+        03-10-2020, 13:30
+    </div>
+    saját üzenet
+</div>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+
+<div class="foreignmessage">
+    <div class="stamp">
+        BÉLA 03-10-2020, 13:30
+    </div>
+    idegen üzenet
+</div>
+
+<div class="servermessage">
+    <div class="stamp">
+        SERVER 03-10-2020, 13:30
+    </div>
+    szerver üzenet
+</div>
