--- a/templates/message_temp.html
+++ b/templates/message_temp.html
@@ -1,10 +1,10 @@
 <div
-        {% if {{username}} %}
+        {% if username %}
         class="foreignmessage">
         <div class="stamp">
             {{username}} {{timestamp}}
         </div>
-        {% elif {{server}} %}
+        {% elif server %}
         class="servermessage">
         <div class="stamp">
             SERVER {{timestamp}}
