--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,6 +62,11 @@ body{
     width: 15vw;
     font-size: 2vw;
     overflow: auto;
+    font-size: 50%;
+}
+
+.usercontainer{
+    display: block;
 }
 
 .textflow{
