--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <div class="messages">
             <!-- a felhasználók tárolója -->
             <div id="users" class="users">
-                users:
+                csevegőpartnerek:
                 <!-- ide pakolgatjuk a bejelentkezett felhasználók neveit -->
             </div>
 
