--- a/templates/index.html
+++ b/templates/index.html
@@ -36,14 +36,14 @@
         <div class="messages">
             <!-- a felhasználók tárolója -->
             <div id="users" class="users">
-                csevegőpartnerek:
+
+                Lobby:
                 <!-- ide pakolgatjuk a bejelentkezett felhasználók neveit -->
             </div>
 
             <!-- az üzenetek tárolója -->
             <div id="messages" class="textflow">
                 <!-- ide pakolgatjuk az üzeneteket -->
-                {% include 'messageflow.html' %}
             </div>
 
         </div>
