--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             <!-- az üzenetküldés ikonja -->
             <img src="/static/img/send.png" class="icon" id="send_icon">
             <!-- A hátralévő karakterek - ez önkényesen 25 lesz -->
-            <div id="counter" style="display: inline-block; margin: auto; font-size: 70%;">(25)</div>
+            <p id="counter" style="display: inline-block; margin: auto; font-size: 70%;">(25)</p>
             <!-- a felhasználó ide gépeli az üzenetet -->
             <input type="text" id="ac_message" class="inputbox" size="40">
         </div>
