--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,9 @@
         <!-- A logó -->
         <img src="/static/img/logo.png" class="logoimg">
         <!-- A felhasználó belépés előtt itt adja meg a nevét -->
-        <input id="uname" type="text" size="10" class="inputbox" placeholder="::username::" style="text-align: center; background-color: rgba(255,255,255,0.7);">
+        <input id="uname" type="text" size="10" class="inputbox" placeholder="::username::" style="text-align: center; background-color: rgba(255,255,255,0.7); border: 1px solid red;">
         <!-- belépés gombja -->
-        <button id="login" class="positivebutton">login</button>
+        <button id="login" class="positivebutton" style="border: 1px solid red;">login</button>
         <!-- kilépés gombja --->
         <button id="logout" class="negativebutton">logout</button>
     </div>
