--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,12 +12,12 @@ body{
 }
 
 .logo{
-    margin: 0;
+    margin: auto;
     position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
-    max-height: 7vh;
+    max-height: 5vh;
     background-color: rgba(0,0,0,0.8);
     box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.8);
 }
@@ -26,11 +26,14 @@ body{
     display: inline-block;
     max-height: 5vh;
     margin: 5px auto;
-    border: 1px solid red;
 }
 
 .menu{
-    border: 1px solid red;
+    position: absolute;
+    top: 5px;
+    display: inline-block;
+    margin: 5px auto;
+    margin-left: 10px;
 }
 
 .interface_holder{
