--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,6 @@
 
     </div>
 
-    <div id="if">
     <div id="user_interface" class="interface_holder">
 
         <div class="messages">
@@ -56,12 +55,11 @@
             <!-- az üzenetküldés ikonja -->
             <img src="/static/img/send.png" class="icon" id="send_icon">
             <!-- A hátralévő karakterek - ez önkényesen 25 lesz -->
-            <p id="counter" style="display: inline-block; margin: auto; font-size: 70%;">(25)</p>
+            <p id="counter">(25)</p>
             <!-- a felhasználó ide gépeli az üzenetet -->
-            <input type="text" id="ac_message" class="inputbox" size="40">
+            <input type="text" id="ac_message" size="40">
         </div>
 
-    </div>
     </div>
 
     <!-- saját script betöltése -->
