--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -235,7 +235,8 @@ body{
 
 .ownmessage{
     display: block;
-    float: right;
+    position: relative;
+    right: -40vw;
     width: fit-content;
     font-size: 1.5vh;
     padding: 2px;
@@ -261,8 +262,8 @@ body{
     text-align: center;
     font-size: 1.5vh;
     padding: 2px;
-    border: 1px solid black;
     background-color: rgba(252, 219, 207, 0.5);
+    box-shadow: 0px 0px 20px 3px rgba(252, 219, 207, 0.5);
 }
 
 .stamp{
