--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -108,14 +108,15 @@ body{
     border-radius: 5px;
     height: 100%;
     width: 81vw;
-    margin: 0;
+    margin-left:auto;
+    margin-right:0;
     background-color: rgba(255,255,255,0.5);
     border: none;
 }
 
 #counter{
     display: inline-block;
-    margin: 0;
+    margin: auto;
     width: 5vw;
     font-size: 70%;
 }
@@ -236,7 +237,8 @@ body{
 .ownmessage{
     display: block;
     position: relative;
-    right: -40vw;
+    margin-left:auto;
+    margin-right:0;
     width: fit-content;
     font-size: 1.5vh;
     padding: 2px;
@@ -251,8 +253,8 @@ body{
     width: fit-content;
     font-size: 1.5vh;
     padding: 2px;
-    border: 1px solid black;
     border-radius: 5px;
+    border: 1px solid black;
     background-color: rgba(202, 219, 237, 0.5);
     text-align: center;
 }
@@ -262,8 +264,8 @@ body{
     text-align: center;
     font-size: 1.5vh;
     padding: 2px;
+    border: 1px solid black;
     background-color: rgba(252, 219, 207, 0.5);
-    box-shadow: 0px 0px 20px 3px rgba(252, 219, 207, 0.5);
 }
 
 .stamp{
